--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 #cy {
-  width: 70%;
-  height: 80%;
+  width: 100%;
+  height: 75%;
   float: left;
 }
 
@@ -8,8 +8,9 @@
   font-family: "Verdana", sans-serif;
   font-size: 0.8rem;
   background-color: #f0f0f0;
-  float: right;
-  width: 29%;
+  float: left;
+  width: 30%;
+  margin-left: 2em;
   padding-left: 0.5em;
   padding-bottom: 1em;
   display: none;
